--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="blue z-depth-2">
       <div class="nav-wrapper container">
-        <a href="#" class="brand-logo center">Viaje Facilito</a>
+        <a href="#" class="brand-logo center">Viaje Planeado.com</a>
       </div>
     </nav>
 
